Fix vertical alignment of project elements and fix gap in first breakpoint on content right side

--- a/assets/sass/_custom.scss
+++ b/assets/sass/_custom.scss
@@ -13,7 +13,7 @@ body {
 }
 
 nav {
-  flex: 1;
+  width: 224px;
   margin-right: 2rem;
   .list {
     margin-top: 66px;
@@ -124,11 +124,10 @@ nav {
 }
 
 .content {
-  flex: 3;
+  max-width: 800px;
 }
 
 .tag {
-  height: 24px;
   line-height: 24px;
   padding: 0 10px;
   &:not(&:first-child) {
