--- a/assets/sass/_overflow.scss
+++ b/assets/sass/_overflow.scss
@@ -5,12 +5,3 @@
 .overflow-x-hidden {
   overflow-x: hidden;
 }
-
-
-.truncate {
-  max-width: 80%;
-  padding-bottom: 2px;
-  white-space: nowrap;
-  overflow-x: hidden;
-  text-overflow: ellipsis;
-}
