--- a/assets/sass/_spacing.scss
+++ b/assets/sass/_spacing.scss
@@ -6,6 +6,10 @@
   margin-right: 1rem;
 }
 
+.mr-2 {
+  margin-right: 2rem;
+}
+
 .ml-1 {
   margin-left: 1rem;
 }
