--- a/assets/sass/_typography.scss
+++ b/assets/sass/_typography.scss
@@ -65,9 +65,14 @@ a {
 
 .list {
   list-style-type: none;
-  padding-left: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .f7 { font-size: .75rem; }
 
 .lh-solid { line-height: 1; }
+
+.white-space-nowrap { white-space: nowrap; }
+
+.text-overflow-ellipsis { text-overflow: ellipsis; }
